Create Admin class

--- a/MPP-lab-project/MPP-lab-project.csproj
+++ b/MPP-lab-project/MPP-lab-project.csproj
@@ -47,6 +47,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Domain\Admin.cs" />
         <Compile Include="Domain\Identifiable.cs" />
         <Compile Include="Domain\SwimmingDistances.cs" />
         <Compile Include="Domain\SwimmingStyles.cs" />
