--- a/MPP-lab-project/MPP-lab-project.csproj
+++ b/MPP-lab-project/MPP-lab-project.csproj
@@ -50,6 +50,7 @@
         <Compile Include="Domain\Admin.cs" />
         <Compile Include="Domain\Identifiable.cs" />
         <Compile Include="Domain\Race.cs" />
+        <Compile Include="Domain\Swimmer.cs" />
         <Compile Include="Domain\SwimmingDistances.cs" />
         <Compile Include="Domain\SwimmingStyles.cs" />
         <Compile Include="Form1.cs">
