--- a/MPP-lab-project/MPP-lab-project.csproj
+++ b/MPP-lab-project/MPP-lab-project.csproj
@@ -47,12 +47,6 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Domain\Admin.cs" />
-        <Compile Include="Domain\Identifiable.cs" />
-        <Compile Include="Domain\Race.cs" />
-        <Compile Include="Domain\Swimmer.cs" />
-        <Compile Include="Domain\SwimmingDistances.cs" />
-        <Compile Include="Domain\SwimmingStyles.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
@@ -61,6 +55,13 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="src\Domain\Admin.cs" />
+        <Compile Include="src\Domain\Identifiable.cs" />
+        <Compile Include="src\Domain\Race.cs" />
+        <Compile Include="src\Domain\Swimmer.cs" />
+        <Compile Include="src\Domain\SwimmingDistances.cs" />
+        <Compile Include="src\Domain\SwimmingStyles.cs" />
+        <Compile Include="src\Repository\Repository.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
