--- a/swimming-contest-software/build.gradle
+++ b/swimming-contest-software/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    runtimeOnly 'org.xerial:sqlite-jdbc:3.36.0.3'
 }
 
 application {
