--- a/MPP-lab-project/MPP-lab-project.csproj
+++ b/MPP-lab-project/MPP-lab-project.csproj
@@ -61,7 +61,7 @@
         <Compile Include="src\Domain\Swimmer.cs" />
         <Compile Include="src\Domain\SwimmingDistances.cs" />
         <Compile Include="src\Domain\SwimmingStyles.cs" />
-        <Compile Include="src\Repository\Repository.cs" />
+        <Compile Include="src\Repository\IRepository.cs" />
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
