Added connection strings information in App.config

--- a/MPP-lab-project/App.config
+++ b/MPP-lab-project/App.config
@@ -18,4 +18,8 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <conectionStrings>
+    <add name="mpp_lab_project.db" connectionString="Data Source=D:\\Proiecte\\databases\\mpp_lab_project.db;Version=3;" user="" password=""/>
+    <add name="mpp_lab_project_test.db" connectionString="Data Source=D:\\Proiecte\\databases\\mpp_lab_project_test.db;Version=3;" user="" password=""/>
+  </conectionStrings>
 </configuration>
