--- a/ConnectionUtils/App.config
+++ b/ConnectionUtils/App.config
@@ -18,4 +18,9 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <appSettings>
+    <add key="log4net.Config" value="log4.config"/>
+    <add key="log4net.Config.Watch" value="True"/>
+    <add key="log4net.Internal.Debug" value="False"/>
+  </appSettings>
 </configuration>
