--- a/swimming-contest-software/build.gradle
+++ b/swimming-contest-software/build.gradle
@@ -1,26 +1,47 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'com.ubbcluj.mpp'
-version '1.0'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+ext {
+    junitVersion = '5.7.1'
+}
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     runtimeOnly 'org.xerial:sqlite-jdbc:3.36.0.3'
+    implementation 'org.controlsfx:controlsfx:11.1.0'
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+    implementation ('com.dlsc.formsfx:formsfx-core:11.3.2') {
+        exclude(group: 'org.openjfx')
+    }
+
 }
 
 application {
-    mainClass = 'Main'
+    mainClass = 'swimmingApp.Main'
+    mainModule = 'swimmingApp'
+
 }
 
 test {
     useJUnitPlatform()
 }
+
+javafx {
+    version = "17.0.1"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+sourceCompatibility = '17'
+targetCompatibility = '17'
