--- a/MPP-lab-project/App.config
+++ b/MPP-lab-project/App.config
@@ -25,7 +25,7 @@
   </connectionStrings>
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
-      <file value="C:\\Users\\Mircea\\Desktop\\Folder nou\\log.log" />
+      <file value="../../../mpp-lab-project.log"/>
       <!-- the location where the log file would be created -->
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
@@ -38,6 +38,5 @@
     <root>
       <level value="DEBUG" />
       <appender-ref ref="FileAppender" /> </root>
-
   </log4net>
 </configuration>
