--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -72,6 +72,7 @@
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tests\Repository\DBRepository\AdminDBRepositoryTests.cs" />
+        <Compile Include="Tests\Repository\DBRepository\RaceDBRepositoryTests.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
