--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -73,6 +73,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tests\Repository\DBRepository\AdminDBRepositoryTests.cs" />
         <Compile Include="Tests\Repository\DBRepository\RaceDBRepositoryTests.cs" />
+        <Compile Include="Tests\Repository\DBRepository\SwimmerDBRepositoryTests.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
