--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ MPP-lab-project/obj/Debug
 ConnectionUtils/bin/Debug
 ConnectionUtils/obj/Debug
 /mpp-lab-project.log
+Tests/bin/Debug
+Tests/obj/Debug
