--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ MPP-lab-project/bin/Debug
 MPP-lab-project/obj/Debug
 ConnectionUtils/bin/Debug
 ConnectionUtils/obj/Debug
-/mpp-lab-project.log
+mpp-lab-project.log
 Tests/bin/Debug
 Tests/obj/Debug
