Modify the name of a form

--- a/MPP-lab-project/MPP-lab-project.csproj
+++ b/MPP-lab-project/MPP-lab-project.csproj
@@ -107,11 +107,11 @@
         <Compile Include="src\Forms\MainForm.Designer.cs">
           <DependentUpon>MainForm.cs</DependentUpon>
         </Compile>
-        <Compile Include="src\Forms\RaceForm.cs">
+        <Compile Include="src\Forms\RaceViewForm.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="src\Forms\RaceForm.Designer.cs">
-          <DependentUpon>RaceForm.cs</DependentUpon>
+        <Compile Include="src\Forms\RaceViewForm.Designer.cs">
+          <DependentUpon>RaceViewForm.cs</DependentUpon>
         </Compile>
         <Compile Include="src\Repository\DBRepository\AdminDBRepository.cs" />
         <Compile Include="src\Repository\DBRepository\RaceDBRepository.cs" />
@@ -143,8 +143,8 @@
         <EmbeddedResource Include="src\Forms\MainForm.resx">
           <DependentUpon>MainForm.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="src\Forms\RaceForm.resx">
-          <DependentUpon>RaceForm.cs</DependentUpon>
+        <EmbeddedResource Include="src\Forms\RaceViewForm.resx">
+          <DependentUpon>RaceViewForm.cs</DependentUpon>
         </EmbeddedResource>
         <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
