Create Service and Observer interfaces

--- a/swimming-contest-software/Client/build.gradle
+++ b/swimming-contest-software/Client/build.gradle
@@ -17,8 +17,8 @@ dependencies {
 }
 
 application {
-    mainClass = 'swimmingApp.Main'
-    mainModule = 'swimmingApp'
+    mainClass = 'client.Main'
+    mainModule = 'client'
 
 }
 
