Remove password hashing. Client can connect to server, view number of swimmers per race, add swimmer. Update happens after every swimmer added.

--- a/swimming-contest-software/Client/build.gradle
+++ b/swimming-contest-software/Client/build.gradle
@@ -17,9 +17,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'client.Main'
-    mainModule = 'client'
-
+    mainClass = 'main.StartClient'
 }
 
 javafx {
