--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -50,6 +50,7 @@
         <Compile Include="Domain\Enums\SwimmingDistances.cs" />
         <Compile Include="Domain\Enums\SwimmingStyles.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Services\ServicesException.cs" />
     </ItemGroup>
     <ItemGroup>
       <Content Include=".gitignore" />
@@ -58,7 +59,6 @@
       <Folder Include="Domain" />
       <Folder Include="Observer" />
       <Folder Include="Protocol" />
-      <Folder Include="Services" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
