--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -131,6 +131,9 @@
         <Name>Server</Name>
       </ProjectReference>
     </ItemGroup>
+    <ItemGroup>
+      <Content Include=".gitignore" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
       <PropertyGroup>
