--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -39,6 +39,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Domain\DTOs\AdminDTO.cs" />
         <Compile Include="Domain\DTOs\RaceDetailsDTO.cs" />
         <Compile Include="Domain\DTOs\RaceDTO.cs" />
         <Compile Include="Domain\DTOs\SwimmerDTO.cs" />
@@ -49,7 +50,21 @@
         <Compile Include="Domain\Entities\SwimmerRace.cs" />
         <Compile Include="Domain\Enums\SwimmingDistances.cs" />
         <Compile Include="Domain\Enums\SwimmingStyles.cs" />
+        <Compile Include="Observer\ISwimmingRaceObserver.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Protocol\Requests\AddSwimmerRequest.cs" />
+        <Compile Include="Protocol\Requests\FindAllRacesDetailsRequest.cs" />
+        <Compile Include="Protocol\Requests\FindAllSwimmersDetailsForRace.cs" />
+        <Compile Include="Protocol\Requests\IRequest.cs" />
+        <Compile Include="Protocol\Requests\LoginRequest.cs" />
+        <Compile Include="Protocol\Requests\LogoutRequest.cs" />
+        <Compile Include="Protocol\Responses\ErrorResponse.cs" />
+        <Compile Include="Protocol\Responses\FindAllRacesDetailsResponse.cs" />
+        <Compile Include="Protocol\Responses\FindAllSwimmersDetailsForRace.cs" />
+        <Compile Include="Protocol\Responses\OkResponse.cs" />
+        <Compile Include="Protocol\Responses\IResponse.cs" />
+        <Compile Include="Protocol\Responses\RacesUpdatedResponse.cs" />
+        <Compile Include="Protocol\Responses\UpdateResponse.cs" />
         <Compile Include="Services\ServicesException.cs" />
     </ItemGroup>
     <ItemGroup>
@@ -57,8 +72,6 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Domain" />
-      <Folder Include="Observer" />
-      <Folder Include="Protocol" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
