--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -68,6 +68,10 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Network\AbstractConcurrentServer.cs" />
+        <Compile Include="Network\AbstractServer.cs" />
+        <Compile Include="Network\SwimmingRacesClientWorker.cs" />
+        <Compile Include="Network\SwimmingRacesConcurrentServer.cs" />
         <Compile Include="Repository\DBRepository\AdminDBRepository.cs" />
         <Compile Include="Repository\DBRepository\RaceDBRepository.cs" />
         <Compile Include="Repository\DBRepository\SwimmerDBRepository.cs" />
@@ -77,7 +81,7 @@
         <Compile Include="Repository\IRepository.cs" />
         <Compile Include="Repository\ISwimmerRaceRepository.cs" />
         <Compile Include="Repository\ISwimmerRepository.cs" />
-        <Compile Include="Services\Services.cs" />
+        <Compile Include="Services\SwimmingRaceServicesServer.cs" />
         <Compile Include="StartServer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Utils\DbUtils.cs" />
