Make every domain class serializable

--- a/Client/App.config
+++ b/Client/App.config
@@ -13,7 +13,7 @@
   </connectionStrings>
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender,log4net">
-      <file value="../../../mpp-lab-project.log" />
+      <file value="../../../Target/client.log" />
       <!-- the location where the log file would be created -->
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
