All functionalities work using client-server approach. No update notification is sent by server

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -87,6 +87,7 @@
         <Compile Include="Forms\MainForm.Designer.cs">
           <DependentUpon>MainForm.cs</DependentUpon>
         </Compile>
+        <Compile Include="Services\SwimmingRaceServicesProxy.cs" />
         <Compile Include="StartClient.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <EmbeddedResource Include="Forms\GenericForm.resx">
