--- a/swimming-contest-software/Client/build.gradle
+++ b/swimming-contest-software/Client/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'com.google.protobuf:protobuf-java:3.20.0'
 }
 
 application {
