--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -33,9 +33,31 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Google.Protobuf, Version=3.20.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604">
+          <HintPath>..\packages\Google.Protobuf.3.20.0\lib\net45\Google.Protobuf.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="mscorlib" />
         <Reference Include="System" />
+        <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
+        <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+          <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Numerics" />
+        <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
@@ -48,10 +70,12 @@
         <Compile Include="Domain\Entities\Race.cs" />
         <Compile Include="Domain\Entities\Swimmer.cs" />
         <Compile Include="Domain\Entities\SwimmerRace.cs" />
-        <Compile Include="Domain\Enums\SwimmingDistances.cs" />
-        <Compile Include="Domain\Enums\SwimmingStyles.cs" />
+        <Compile Include="Domain\Enums\SwimmingDistance.cs" />
+        <Compile Include="Domain\Enums\SwimmingStyle.cs" />
         <Compile Include="Observer\ISwimmingRaceObserver.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Protocol\Protobuf\ProtoUtils.cs" />
+        <Compile Include="Protocol\Protobuf\SwimmingContestProtobuf.cs" />
         <Compile Include="Protocol\Requests\AddSwimmerRequest.cs" />
         <Compile Include="Protocol\Requests\FindAllRacesDetailsRequest.cs" />
         <Compile Include="Protocol\Requests\FindAllSwimmersDetailsForRaceRequest.cs" />
@@ -73,6 +97,9 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Domain" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
