Modify build.gradle in Client

--- a/swimming-contest-software/Client/build.gradle
+++ b/swimming-contest-software/Client/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 }
 
 application {
-    mainClass = 'main.StartClient'
+//    mainClass = 'main.StartClient'
+    mainClass = 'main.StartClientProtobuf'
 }
 
 javafx {
