--- a/swimming-contest-software/Networking/build.gradle
+++ b/swimming-contest-software/Networking/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
@@ -12,20 +11,22 @@ repositories {
 }
 
 dependencies {
-    implementation project(':Model')
-    implementation project(':Services')
-    implementation project(':Networking')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'com.google.protobuf:protobuf-java:3.20.0'
+
+    implementation project(':Model')
+    implementation project(':Services')
 }
 
-application {
-//    mainClass = 'main.StartClient'
-    mainClass = 'main.StartClientProtobuf'
+test {
+    useJUnitPlatform()
 }
 
 javafx {
     version = "17.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = [ 'javafx.controls' ]
 }
