--- a/swimming-contest-software/Server/build.gradle
+++ b/swimming-contest-software/Server/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
 
     implementation project(':Model')
-    runtimeOnly 'org.xerial:sqlite-jdbc:3.36.0.3'
+    implementation project(':Persistence')
+    implementation project(':Services')
+    implementation project(':Networking')
 }
 
 test {
