--- a/swimming-contest-software/Persistence/build.gradle
+++ b/swimming-contest-software/Persistence/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.springframework:spring-context:5.1.5.RELEASE'
 
     implementation project(':Model')
 
