--- a/swimming-contest-software/Client/build.gradle
+++ b/swimming-contest-software/Client/build.gradle
@@ -21,8 +21,8 @@ dependencies {
 }
 
 application {
-//    mainClass = 'main.StartClient'
-    mainClass = 'main.StartClientProtobuf'
+    mainClass = 'main.StartClient'
+//    mainClass = 'main.StartClientProtobuf'
 }
 
 javafx {
