--- a/swimming-contest-software/Server/build.gradle
+++ b/swimming-contest-software/Server/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
+    implementation 'org.springframework:spring-context:5.3.18'
+    implementation 'org.springframework:spring-jms:5.3.18'
+    implementation 'org.apache.activemq:activemq-spring:5.17.1'
 
     implementation project(':Model')
     implementation project(':Persistence')
@@ -32,5 +35,6 @@ ext {
 }
 
 application {
-    mainClass = 'main.StartServer'
+//    mainClass = 'main.StartServer'
+    mainClass = 'main.StartServerAMS'
 }
