--- a/swimming-contest-software/Services/build.gradle
+++ b/swimming-contest-software/Services/build.gradle
@@ -13,6 +13,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+    implementation 'org.springframework:spring-context:5.3.18'
+    implementation 'org.springframework:spring-jms:5.3.18'
+    implementation 'org.apache.activemq:activemq-spring:5.17.1'
+
     implementation project(':Model')
 }
 
